# cavecarver

./: 0001-thinkpad430s-jailhouse-config.patch  Makefile  Makefile.misc.mk  README.md  ade64.cpp  c.sh  elf.h  engine.cpp  findinmem.sh  findstrings.sh  fuse-mon.py  fuse.py  infelf.c  m.py  obfs.txt  passthrough.py  payload.cpp  payload_reassemble.cpp  qemu.sh  qemu_cap.sh  tap.stp
distorm/: Makefile
obfsproxy.tunnel/: README.md  h.sh  iptable-save  iptable-stop  s.sh  standalone_client_config.ini  standalone_server_config.ini
p2sb/: Makefile  README.md  devmem2.c  p2sb.c  p2sb.mod.c  p2sb_gen.c  pch.c
p2sb/crypt/: crypt.cs  crypt.csproj
passe-partout-0.1/: Makefile.main
pcileech/pcileech/: Makefile  device.c  deviceqemu.c  deviceqemu.cpp  oscompatibility.c  pcileech.c  pcileech.h  util.c
perlx8664/: Makefile.top.mk  README.md  log.txt  p.pl  p.pm  p.pm~
perlx8664/t/: Makefile  Makefile~  p.pl~  u.c  u.c~  u.pl  u.pl~
qemu-2.11+dfsg/: exec.c  hmp-commands.hx  monitor.c  qapi-schema.json
qemu-2.11+dfsg/.pc/: applied-patches
qemu-2.11+dfsg/.pc/use-data-path.patch/: vl.c
qemu-2.11+dfsg/hw/ppc/: spapr.c
qemu-2.11+dfsg/hw/s390x/: s390-virtio-ccw.c
qemu-2.11+dfsg/include/exec/: cpu-common.h
qemu-2.11+dfsg/include/qemu/: base64.h
qemu-2.11+dfsg/util/: base64.c
shinter/: LICENSE  Makefile  README.md  exportmap  shinterposer.sh  shpreload.c  shpreload.pm
shinter/mod/: .interpose.ko.cmd  .interpose.mod.o.cmd  .interpose.o.cmd  0001-in-kernel-interposer-4.19.patch  Makefile  README.md  arm.c  d.diff  interpose.arm.c  interpose.c  interpose.h  interpose.ko  interpose.mod.c  log.c  log.h  log.org  log.org~  modules.order  process.py
shinter/mod/.tmp_versions/: interpose.mod
shinter/mod/test/: Makefile  process.py
shinter/t/: Makefile  mygcc.real  myls.real
ubuntu/: Makefile  carambola.txt  dnsmasq.conf  hostapd  out.php  recompile.sh  start_wifi.sh
valgrind-gen/: Makefile.am  configure.ac
valgrind-gen/.svn/: wc.db
valgrind-gen/VEX/.svn/: wc.db
valgrind-gen/VEX/priv/: ir_defs.c  ir_opt.c
valgrind-gen/exp-dhat/: dh_main.c
valgrind-gen/lackey/: Makefile  Makefile.am  config.h  distorm.c  distorm.h  instructions.c  lackey.h  lk_main.c  lk_print.c  mnemonics.c  operands.c
valgrind-gen/taintgrind/: tnt_include.h
valgrind-gen/tracegrind/: Makefile.am  copy.c  decoder.c  insts.c  prefix.c  tracegrind.h  tracegrind_expr.c  tracegrind_gen.c  tracegrind_main.c  tracegrind_print.c
(+19 files in other folders)
